# clickhouse_data_snapshot

./: .gitmodules  CMakeLists.txt
cmake/task/: CMakeLists.txt
contrib/poco/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  MANIFEST  Makefile  cmake_install.cmake  cmake_uninstall.cmake
contrib/poco/Encodings/: Makefile  cmake_install.cmake
contrib/poco/Foundation/: Makefile  cmake_install.cmake
contrib/poco/JSON/: Makefile  cmake_install.cmake
contrib/poco/Net/: Makefile  cmake_install.cmake
contrib/poco/Poco/: PocoEncodingsTargets.cmake  PocoFoundationTargets.cmake  PocoJSONTargets.cmake  PocoNetTargets.cmake  PocoUtilTargets.cmake  PocoXMLTargets.cmake
contrib/poco/Util/: Makefile  cmake_install.cmake
contrib/poco/XML/: Makefile  cmake_install.cmake
src/: main.cpp
src/clickhouse/: CMakeLists.txt  DataPart.cpp  DataPart.h  MergeTreeData.cpp  MergeTreeData.h  Partition.h
src/common/: CMakeLists.txt  ErrCode.h  Loggers.cpp  Loggers.h  Marcos.h  Utils.h
src/config/: CMakeLists.txt  Context.cpp  Context.h
src/metadata/: Metadata.h  MetadataManager.cpp  MetadataManager.h
src/task/: BackupTask.cpp  BackupTask.h  CMakeLists.txt  MergeTask.h  Task.cpp  Task.h  TaskFactory.cpp
src/tools/: CMakeLists.txt  TaskFactory.cpp  TaskFactory.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h
